# AutoAim-2022

./: .gitignore  CMakeLists.txt  README.md  package.json
src/: AutoAim.cpp  AutoAim.h  trainSVM.cpp  trainSVM.h
src/armor_detector/: CMakeLists.txt
src/armor_detector/include/: ArmorFinder.h  Classifier.h  Detector.h  LightBarFinder.h
src/armor_detector/src/: ArmorFinder.cpp  CNN.cpp  Classifier.cpp  Detector.cpp  LightBarFinder.cpp  Score.cpp
src/driver/: CMakeLists.txt
src/driver/include/: SerialPort.h  VideoCapture.h  VideoSaver.h
src/driver/src/: DaHen.cpp  SerialPort.cpp  Video.cpp  VideoCapture.cpp  VideoSaver.cpp
src/pose_estimate/: CMakeLists.txt
src/pose_estimate/include/: Kalman.h  PoseSolver.h  Predictor.h
src/pose_estimate/src/: Kalman.cpp  PoseSolver.cpp  Predictor.cpp
src/utils/: CMakeLists.txt
src/utils/data/pictures/armors/: clear_all_tmp_pics.py  cls.md  see_bin_pic_to_cls.py
src/utils/include/: Array.hpp  Params.h  Thread.h
src/utils/src/: Config.cpp  Params.cpp  Thread.cpp
src/utils/tools/: auto_start.sh  init.json
